[gd_scene load_steps=2 format=3 uid="uid://t4j5kau1g2k5"]

[ext_resource type="Script" uid="uid://bvclqyf8ydp2h" path="res://scripts/menu_main.gd" id="1_l6cm7"]

[node name="MenuMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.5058824, 0.78431374, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -68.0
offset_right = 112.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DisplayName" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Username"
alignment = 1

[node name="IPAddress" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "localhost"
alignment = 1

[node name="Join" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join"

[node name="Host" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Host"

[node name="DedicatedServer" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Dedicated Server [WIP]"

[node name="LoadingScreen" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.39215687, 0.5019608, 1)

[node name="Label" type="Label" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -11.5
offset_right = 130.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Attempting to connect to server..."
horizontal_alignment = 1
